# WeNoChat

./: .gitignore  README.md  v0.1.0需求.md  任务表（持续更新）.xlsx  模块分析.md  通讯协议.md  通讯协议.xmind
Server/: CMakeLists.txt  README.md  env.sh  main.cpp  reset  reset.cpp
Server/Database/: database.cpp
Server/Server/: CmdHandler.cpp  Server.cpp
Server/include/: CmdHandler.h  Constants.h  Json.h  Record.h  Server.h  Tables.h  sql++.h
Server/res/database/: info.db
Server/src/: CMakeLists.txt  CmdHandler.cpp  Server.cpp  main.cpp
Server/src/Database/: sql++.cpp
Server/src/Server/: CmdHandler.cpp  Server.cpp
Server/src/Tools/: File.cpp  Tools.cpp
Server/src/include/: CmdHandler.h  File.h  Record.h  Server.h  Tools.h  sql++.h
WeNoChat/: WeNoChat.pro  chatmessagewidget.cpp  chatmessagewidget.h  communicate_utils.cpp  communicate_utils.h  forgotpwd.cpp  forgotpwd.h  forgotpwd.ui  friendlist.cpp  friendlist.h  login.cpp  login.h  login.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  messagerecord.cpp  messagerecord.h  password.cpp  password.h  password.ui  question.cpp  question.h  question.ui  regist.cpp  regist.h  regist.ui  searchfriends.cpp  searchfriends.h  searchfriends.ui  uires.qrc  user.cpp  user.h  user.ui  viewfullmessage.cpp  viewfullmessage.h  viewfullmessage.ui  wncimage.cpp  wncimage.h
WeNoChat/UI/: chatmessagewidget.cpp  chatmessagewidget.h  friendlist.cpp  friendlist.h  group.cpp  group.h  login.cpp  login.h  login.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  password.ui  picturecut.cpp  question.ui  screencut.cpp  searchfriends.cpp  user.cpp  user.ui
WeNoChat/file_add/: chatmessagewidget.h  mainwindow.cpp  mainwindow.h
WeNoChat/socket/: basesock.cpp  basesock.h  filesock.cpp  filesock.h
WeNoChat/utils/: communicate_utils.cpp  communicate_utils.h  tools.cpp
build-WeNoChat-Desktop_Qt_5_8_0_MinGW_32bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  object_script.WeNoChat.Debug  object_script.WeNoChat.Release  ui_forgotpwd.h  ui_login.h  ui_mainwindow.h  ui_regist.h
build-WeNoChat-Desktop_Qt_5_8_0_MinGW_32bit-Debug/debug/: moc_forgotpwd.cpp  moc_login.cpp  moc_mainwindow.cpp  moc_regist.cpp  qrc_uires.cpp
(+2 files in other folders)
